# icecat-harvester

./: .env.example  .gitignore  README.md  README.txt  get_category_names.py  icecat_downloader.py  inspect_xml.py  pyproject.toml  scan_categories.py  targets.txt
data/sample-data/: Laptop_Spare_Parts.ndjson  Laptops.ndjson  Mobile_Phone_Cases.ndjson  Mobile_Phones.ndjson  PCs-Workstations.ndjson  Smartphones.ndjson  TV_Mounts_and_Stands.ndjson  TVs.ndjson  Tablets.ndjson  hand-crafted-examples.json
src/: downloader.py  get_category_names.py
src/icecat_harvester/: cleanup_folders.py  combine_json.py  curate_demo_data.py  download_xml.py  gen_prices.py  get_category_names.py  get_features.py  stats.py  xml_to_json.py
